Fix ByteBuddy